feature: Finish all unit tests